<resources>
    <string name="app_name">MyGank</string>

    <string name="girl">姑娘</string>
    <string name="technology">科技</string>
    <string name="sport">体育</string>
    <string name="joke">笑话</string>
    <string name="today">今天</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="web">前端</string>
    <string name="extension">扩展阅读</string>

    <string name="favorite">点赞</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="wx_seesion">微信好友</string>
    <string name="wx_time_line">微信朋友圈</string>
    <string name="wx_favorite">微信收藏</string>
    <string name="share_page">分享文章</string>
    <string name="cancel">取消</string>
</resources>
