<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/tab_girl"
        android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/girl"
          android:icon="@drawable/ic_girl"/>

    <item android:id="@+id/tab_android"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/android"
          android:icon="@drawable/ic_android"/>

    <item android:id="@+id/tab_ios"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/ios"
          android:icon="@drawable/ic_ios"/>

    <item android:id="@+id/tab_web"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/web"
          android:icon="@drawable/ic_web"/>

    <item android:id="@+id/tab_extension"
          android:enabled="true"
          app:showAsAction="ifRoom"
          android:title="@string/extension"
          android:icon="@drawable/ic_extension"/>
</menu>