<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="xyz.zpayh.mygank.webview.WebViewActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_gravity="end"
                android:src="@android:drawable/ic_menu_share"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_webview" />

    <RelativeLayout
        android:id="@+id/share_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:elevation="@dimen/dp_4"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/share_title"
            android:text="@string/share_page"
            android:layout_centerHorizontal="true"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_margin="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_below="@+id/share_title"
            android:id="@+id/share_content"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_14">
            <RelativeLayout
                android:id="@+id/wx_session"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/sd_wx_session"
                    fresco:placeholderImage="@drawable/icon64_wx_logo"
                    android:layout_width="56dp"
                    android:layout_height="56dp"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_session"
                    android:layout_below="@+id/sd_wx_session"
                    android:text="@string/wx_seesion"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wx_time_line"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/sd_wx_time_line"
                    fresco:placeholderImage="@drawable/icon_res_download_moments"
                    android:layout_width="56dp"
                    android:layout_height="56dp"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_time_line"
                    android:layout_below="@+id/sd_wx_time_line"
                    android:text="@string/wx_time_line"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wx_favorite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/sd_wx_favorite"
                    fresco:placeholderImage="@drawable/icon_res_download_collect"
                    android:layout_width="56dp"
                    android:layout_height="56dp"/>
                <TextView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_favorite"
                    android:layout_below="@+id/sd_wx_favorite"
                    android:text="@string/wx_favorite"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_below="@+id/share_content"
            android:text="@string/cancel"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:padding="@dimen/dp_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
